--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Taskmaster Pro</title>
 </head>
@@ -18,7 +19,8 @@
       <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
         Task</button>
       <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
-      <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
+      <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas
+        architecto ipsa
         excepturi aut non
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
       </p>
@@ -30,38 +32,28 @@
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
             <h2 class="card-header bg-dark text-light">To Do</h2>
-            <ul id="list-toDo" class="list-group list-group-flush"> </ul>
+            <ul id="list-toDo" class="list-group list-group-flush sortable"> </ul>
           </div>
         </div>
         <!-- in progress code start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
             <h2 class="card-header bg-dark text-light">In Progress</h2>
-            <ul id="list-inProgress" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task in progress</p>
-              </li>
-            </ul>
+            <ul id="list-inProgress" class="list-group list-group-flush sortable"> </ul>
           </div>
         </div>
         <!-- in review code start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
             <h2 class="card-header bg-dark text-light">In Review</h2>
-            <ul id="list-inReview" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task in review</p>
-              </li>
-            </ul>
+            <ul id="list-inReview" class="list-group list-group-flush sortable"> </ul>
           </div>
         </div>
         <!-- done code start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
             <h2 class="card-header bg-dark text-light">Done</h2>
-            <ul id="list-done" class="list-group list-group-flush"></ul>
+            <ul id="list-done" class="list-group list-group-flush sortable"> </ul>
           </div>
         </div>
       </div>
@@ -89,7 +81,7 @@
             </div>
             <div class="form-group">
               <label for="modalDueDate">Due date</label>
-              <input type="text" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" class="form-control"/>
+              <input type="text" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" class="form-control" />
             </div>
           </form>
         </div>
@@ -102,6 +94,8 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js" integrity="sha512-0bEtK0USNd96MnO4XhH8jhv3nyRF0eK87pJke6pkYf3cM0uDIhNJy9ltuzqgypoIFXw3JSuiy04tVk4AjpZdZw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/script.js"></script>
